fix overflow

--- a/assets/sass/_code.scss
+++ b/assets/sass/_code.scss
@@ -8,6 +8,7 @@ code {
 pre {
   border-radius: 4rem;
   padding: 5rem 10rem 6rem;
+  overflow: auto;
 
   code {
     padding: 0;
